--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   flutter_rating_bar: ^4.0.1
   freezed_annotation: ^2.4.4
+  go_router: ^14.2.1
   json_annotation: ^4.9.0
 
 dev_dependencies:
@@ -24,6 +25,44 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/tomato.png
-    - assets/cat.jpeg
-    - assets/gps.png
+    - assets/images/tomato.png
+    - assets/images/cat.jpeg
+    - assets/icons/gps.png
+    - assets/icons/home.png
+    - assets/icons/home-fill.png
+    - assets/icons/saved.png
+    - assets/icons/saved-fill.png
+    - assets/icons/notification.png
+    - assets/icons/notification-fill.png
+    - assets/icons/profile.png
+    - assets/icons/profile-fill.png
+    - assets/icons/inactive.png
+    - assets/icons/timer.png
+    - assets/images/salmon.jpg
+    - assets/images/orange.jpg
+    - assets/images/eggs.jpg
+    - assets/images/lemon.jpg
+    - assets/icons/google.png
+    - assets/icons/facebook.png
+
+  fonts:
+    - family: Pretendard
+      fonts:
+        - asset: assets/fonts/Pretendard-Thin.ttf
+          weight: 100
+        - asset: assets/fonts/Pretendard-ExtraLight.ttf
+          weight: 200
+        - asset: assets/fonts/Pretendard-Light.ttf
+          weight: 300
+        - asset: assets/fonts/Pretendard-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Pretendard-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Pretendard-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/Pretendard-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Pretendard-ExtraBold.ttf
+          weight: 800
+        - asset: assets/fonts/Pretendard-Black.ttf
+          weight: 900
