--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   freezed_annotation: ^2.4.4
   go_router: ^14.2.1
   json_annotation: ^4.9.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
