--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   flutter_rating_bar: ^4.0.1
   freezed_annotation: ^2.4.4
+  get_it: ^7.7.0
   go_router: ^14.2.1
   json_annotation: ^4.9.0
   provider: ^6.1.2
