feat: PopupMenuButton, Deeplink 구현 완료 - Copy Link, SnackBar, 통합테스트 tbu

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
+                <data android:scheme="foodrecipe" android:host="recipe"/>
             </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
