--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   go_router: ^14.2.1
   json_annotation: ^4.9.0
   provider: ^6.1.2
+  uni_links: ^0.5.1
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
