--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   get_it: ^7.7.0
   go_router: ^14.2.1
   json_annotation: ^4.9.0
+  network_image_mock: ^2.1.1
   provider: ^6.1.2
   uni_links: ^0.5.1
   url_launcher: ^6.3.0
@@ -26,6 +27,8 @@ dev_dependencies:
   build_runner: ^2.4.11
   freezed: ^2.5.2
   json_serializable: ^6.8.0
+  integration_test:
+    sdk: flutter
 
 flutter:
   uses-material-design: true
